# web-scrapping

./: README.md  pyproject.toml
notebooks/etherscan/: TOP_ACCOUNTS_NAMES.xlsx  top_accounts_scrapper.ipynb
src/scrapper/: test_setup.py
